2008-05-19  Jimmy Retzlaff  <jimmy@retzlaff.com>

	* Bump version number to 0.6.8.

    * Updated test suite to be smarted about which interpreters
    to use for testing and to output stats.

2008-04-17  Thomas Heller  <theller@python.net>

	* Changes to the test suite.

	* Fix MemoryLoadLibrary to handle loading function addresses by
	ordinal numbers.  Patch and test by Matthias Miller - thanks!

2008-04-05  Jimmy Retzlaff  <jimmy@retzlaff.com>

	* Using the options compressed=1, bundle_files=3, and zipfile=None at
	the same time now works; patch from Alexey Borzenkov (sf request id
	1707920)

2008-04-04  Thomas Heller  <theller@python.net>

	* py2exe\boot_ctypes_com_server.py: Port this module from
	ctypes.com to comtypes.  Work in progress.

2008-04-01  Thomas Heller  <theller@python.net>

	* Allow renaming of single-executable files; patch from Alexey
	Borzenkov (sf request id 1516099)


2008-02-29  Thomas Heller  <theller@python.net>

	* py2exe\__init__.py: Bump version number to 0.6.7.

	* source\py2exe_util.c: Embedding icon resources into the image
	does now work correctly even for ico files containing multiple
	images.

2007-09-07  Thomas Heller  <theller@python.net>

	* build_exe.py: Patch from Grant Edwards, slightly adjusted:
	py2exe now renames the pyd files that it copies into the dist
	directory so that they include the package name.  This prevents
	name conflicts.

2007-03-26  Mark Hammond  <mhammond@skippinet.com.au>
	* Samples for the 'typelibs' support, including the new option of
	pre-generating a typelib and specifying the file as an input to py2exe

2006-12-27  Jimmy Retzlaff  <jimmy@retzlaff.com>

	* boot_common.py: Handle new parameter to fake_getline in Python 2.5
	as suggested by Tim Tucker.

2006-11-22  Thomas Heller  <theller@python.net>

	* py2exe does now work sort-of on win64, with a 64-bit build of
	Python.

	* On win64, complain if bundle_files < 3.  This is not yet