@@ -1,0 +1,4 @@
+from __future__ import absolute_import
+
+import sys as a
+from .. import sys as b
